# django-testbed

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: django.yml
djangoProject/: settings.py  urls.py
pdf_bench/: apps.py  pdf_benchmark.py  speed_memory_check.py
pdf_bench/tests/: test_extract_text_from_pdf.py
testApp/: tests.py
testApp/migrations/: 0002_examplemodel_testapp_exa_attribu_bbbd02_idx.py
weirdFilterOrder/: apps.py  models.py  tests.py
weirdFilterOrder/migrations/: 0001_initial.py  0002_examplemodel_testapp_exa_attribu_bbbd02_idx.py  0003_auto_20211025_1932.py
weirdFilterOrder/tests/: test_weird_filter_order.py
